services/resource_coordinator/public/cpp/frame_resource_coordinator.cc
@@ -4,6 +4,8 @@
 
 #include "services/resource_coordinator/public/cpp/frame_resource_coordinator.h"
 
+#include "services/resource_coordinator/public/cpp/process_resource_coordinator.h"
+
 namespace resource_coordinator {
 
 FrameResourceCoordinator::FrameResourceCoordinator(
@@ -15,6 +17,15 @@ FrameResourceCoordinator::FrameResourceCoordinator(
 }
 
 FrameResourceCoordinator::~FrameResourceCoordinator() = default;
+
+void FrameResourceCoordinator::SetProcess(
+    const ProcessResourceCoordinator& process) {
+  if (!service_ || !process.service())
+    return;
+  process.service()->GetID(
+      base::BindOnce(&FrameResourceCoordinator::SetProcessByID,
+                     weak_ptr_factory_.GetWeakPtr()));
+}
 
 void FrameResourceCoordinator::SetAudibility(bool audible) {
   if (!service_)
@@ -31,7 +42,7 @@ void FrameResourceCoordinator::OnAlertFired() {
 void FrameResourceCoordinator::AddChildFrame(
     const FrameResourceCoordinator& child) {
   DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
-  if (!service_)
+  if (!service_ || !child.service())
     return;
   // We could keep the ID around ourselves, but this hop ensures that the child
   // has been created on the service-side.
@@ -43,7 +54,7 @@ void FrameResourceCoordinator::AddChildFrame(
 void FrameResourceCoordinator::RemoveChildFrame(
     const FrameResourceCoordinator& child) {
   DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
-  if (!service_)
+  if (!service_ || !child.service())
     return;
   child.service()->GetID(
       base::BindOnce(&FrameResourceCoordinator::RemoveChildFrameByID,
@@ -56,15 +67,24 @@ void FrameResourceCoordinator::ConnectToService(
   provider->CreateFrameCoordinationUnit(mojo::MakeRequest(&service_), cu_id);
 }
 
+void FrameResourceCoordinator::SetProcessByID(
+    const CoordinationUnitID& process_id) {
+  DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
+  DCHECK(service_);
+  service_->SetProcess(process_id);
+}
+
 void FrameResourceCoordinator::AddChildFrameByID(
     const CoordinationUnitID& child_id) {
   DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
+  DCHECK(service_);
   service_->AddChildFrame(child_id);
 }
 
 void FrameResourceCoordinator::RemoveChildFrameByID(
     const CoordinationUnitID& child_id) {
   DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
+  DCHECK(service_);
   service_->RemoveChildFrame(child_id);
 }
 
